// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 1: empty — 'No opportunities right now' + scan count 1`] = `
<main
  class="min-h-screen bg-slate-900 p-8"
>
  <header
    class="mb-8"
  >
    <h1
      class="text-3xl font-bold text-slate-50"
    >
      Opportunities
    </h1>
    <p
      class="text-slate-400 mt-1"
    >
      growth scans your contacts for revenue patterns you haven't worked.
    </p>
  </header>
  <div
    class="max-w-4xl mx-auto rounded-xl border border-slate-700 bg-slate-800 p-8 text-center"
  >
    <div
      class="w-12 h-12 mx-auto mb-4 rounded-full bg-slate-700 flex items-center justify-center"
    >
      <span
        class="text-slate-400 text-xl"
      >
        ✓
      </span>
    </div>
    <h2
      class="text-xl font-semibold text-slate-100"
    >
      No opportunities right now
    </h2>
    <p
      class="text-slate-400 mt-2 max-w-md mx-auto"
    >
      We scanned 
      5
       contacts and didn't find any signals above threshold. New opportunities appear as contacts go dormant or new leads arrive unworked.
    </p>
    <button
      class="mt-6 px-4 py-2 text-sm font-medium text-white bg-indigo-500 rounded-lg hover:bg-indigo-400"
    >
      Scan again
    </button>
  </div>
</main>
`;

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 2: found — header copy + opportunity card structure 1`] = `
<main
  class="min-h-screen bg-slate-900 p-8"
>
  <header
    class="mb-8 max-w-4xl mx-auto"
  >
    <div
      class="flex items-baseline justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-slate-50"
        >
          Opportunities
        </h1>
        <p
          class="text-slate-400 mt-1"
        >
          growth found 
          1
           
          opportunity
           across
           
          12
           contacts.
        </p>
      </div>
      <button
        aria-label="Rescan opportunities"
        class="text-sm text-slate-400 hover:text-slate-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-slate-900 rounded px-2 py-1"
      >
        ↻ Rescan
      </button>
    </div>
  </header>
  <div
    class="max-w-4xl mx-auto space-y-6"
  >
    <article
      aria-label="Opportunity: Reactivate dormant leads"
      class="rounded-xl border border-slate-700 bg-slate-800 overflow-hidden"
      role="article"
    >
      <div
        class="p-6 border-b border-slate-700"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="flex-1"
          >
            <div
              class="flex items-center gap-2 mb-2"
            >
              <span
                aria-hidden="true"
                class="w-2 h-2 rounded-full bg-indigo-400"
              />
              <span
                class="text-xs font-medium text-indigo-400 uppercase tracking-wide"
              >
                AI-identified opportunity
              </span>
            </div>
            <h2
              class="text-xl font-semibold text-slate-50"
            >
              Reactivate dormant leads
            </h2>
            <p
              class="text-slate-300 mt-2"
            >
              7 contacts went 30+ days without engagement.
            </p>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <div
              class="text-3xl font-bold text-slate-50"
            >
              7
            </div>
            <div
              class="text-xs text-slate-400"
            >
              contacts
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-6 py-4 border-b border-slate-700"
      >
        <h3
          class="text-xs font-semibold text-slate-400 uppercase tracking-wide mb-3"
        >
          Contacts in this segment
        </h3>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-8 h-8 rounded-full bg-slate-700 flex items-center justify-center text-slate-300 text-xs font-medium"
              >
                SA
              </div>
              <span
                class="text-slate-100"
              >
                Sample One
              </span>
              <span
                class="text-slate-500 font-mono text-xs"
              >
                s1@example.com
              </span>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              lead
            </span>
          </li>
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-8 h-8 rounded-full bg-slate-700 flex items-center justify-center text-slate-300 text-xs font-medium"
              >
                SA
              </div>
              <span
                class="text-slate-100"
              >
                Sample Two
              </span>
              <span
                class="text-slate-500 font-mono text-xs"
              >
                s2@example.com
              </span>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              mql
            </span>
          </li>
          <li
            class="text-xs text-slate-500 pl-11"
          >
            + 
            5
             more
          </li>
        </ul>
      </div>
      <div
        class="px-6 py-4 border-b border-slate-700"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-xs font-semibold text-slate-400 uppercase tracking-wide"
          >
            What growth will do
          </h3>
          <button
            aria-expanded="false"
            class="text-xs text-slate-400 hover:text-slate-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded px-1"
          >
            ▼ Show reasoning
          </button>
        </div>
        <p
          class="text-sm text-slate-300 mt-2 font-medium"
        >
          Dormant Reactivation — 3-touch
        </p>
        <p
          class="text-xs text-slate-500 mt-1"
        >
          Email + SMS + Email over 5 days.
        </p>
        <ol
          class="mt-3 space-y-2"
        >
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              1
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                0
                : 
                ask open question
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                email
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              2
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                2
                : 
                soft check in
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                sms
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              3
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                5
                : 
                final value offer
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                email
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        class="px-6 py-4 bg-slate-800 border-t border-slate-700 flex items-center justify-between gap-4 flex-wrap"
      >
        <p
          class="text-xs text-slate-500"
        >
          Preview sends no real messages. Launch dispatches via your connected channels.
        </p>
        <div
          class="flex gap-3 shrink-0"
        >
          <button
            class="px-4 py-2 text-sm font-medium border border-slate-600 text-slate-200 rounded-lg hover:bg-slate-700 disabled:opacity-50 disabled:cursor-not-allowed"
          >
            Preview messages
          </button>
          <button
            class="px-4 py-2 text-sm font-medium text-white bg-indigo-500 rounded-lg hover:bg-indigo-400 disabled:opacity-50 disabled:cursor-not-allowed"
          >
            Launch for 7
          </button>
        </div>
      </div>
    </article>
  </div>
</main>
`;

exports[`KAN-886 — AiSegmentsView regression snapshots > Sub-state 3: launched — success banner appears after launch 1`] = `
<main
  class="min-h-screen bg-slate-900 p-8"
>
  <header
    class="mb-8 max-w-4xl mx-auto"
  >
    <div
      class="flex items-baseline justify-between"
    >
      <div>
        <h1
          class="text-3xl font-bold text-slate-50"
        >
          Opportunities
        </h1>
        <p
          class="text-slate-400 mt-1"
        >
          growth found 
          1
           
          opportunity
           across
           
          12
           contacts.
        </p>
      </div>
      <button
        aria-label="Rescan opportunities"
        class="text-sm text-slate-400 hover:text-slate-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-slate-900 rounded px-2 py-1"
      >
        ↻ Rescan
      </button>
    </div>
  </header>
  <div
    aria-live="polite"
    class="max-w-4xl mx-auto mb-6 rounded-xl border border-emerald-800 bg-emerald-950 p-5"
    role="status"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div>
        <div
          class="flex items-center gap-2 mb-1"
        >
          <span
            aria-hidden="true"
            class="w-2 h-2 rounded-full bg-emerald-400"
          />
          <span
            class="text-xs font-medium text-emerald-300 uppercase tracking-wide"
          >
            Launched
          </span>
        </div>
        <p
          class="text-emerald-50 font-medium"
        >
          7 contacts enrolled — first message queued.
        </p>
        <p
          class="text-emerald-200 text-sm mt-1"
        >
          <a
            class="underline hover:text-emerald-100"
            href="/audit"
          >
            View decisions in audit log →
          </a>
        </p>
      </div>
      <button
        aria-label="Dismiss"
        class="text-emerald-400 hover:text-emerald-200 text-lg leading-none"
      >
        ×
      </button>
    </div>
  </div>
  <div
    class="max-w-4xl mx-auto space-y-6"
  >
    <article
      aria-label="Opportunity: Reactivate dormant leads"
      class="rounded-xl border border-slate-700 bg-slate-800 overflow-hidden"
      role="article"
    >
      <div
        class="p-6 border-b border-slate-700"
      >
        <div
          class="flex items-start justify-between gap-4"
        >
          <div
            class="flex-1"
          >
            <div
              class="flex items-center gap-2 mb-2"
            >
              <span
                aria-hidden="true"
                class="w-2 h-2 rounded-full bg-indigo-400"
              />
              <span
                class="text-xs font-medium text-indigo-400 uppercase tracking-wide"
              >
                AI-identified opportunity
              </span>
            </div>
            <h2
              class="text-xl font-semibold text-slate-50"
            >
              Reactivate dormant leads
            </h2>
            <p
              class="text-slate-300 mt-2"
            >
              7 contacts went 30+ days without engagement.
            </p>
          </div>
          <div
            class="shrink-0 text-right"
          >
            <div
              class="text-3xl font-bold text-slate-50"
            >
              7
            </div>
            <div
              class="text-xs text-slate-400"
            >
              contacts
            </div>
          </div>
        </div>
      </div>
      <div
        class="px-6 py-4 border-b border-slate-700"
      >
        <h3
          class="text-xs font-semibold text-slate-400 uppercase tracking-wide mb-3"
        >
          Contacts in this segment
        </h3>
        <ul
          class="space-y-2"
        >
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-8 h-8 rounded-full bg-slate-700 flex items-center justify-center text-slate-300 text-xs font-medium"
              >
                SA
              </div>
              <span
                class="text-slate-100"
              >
                Sample One
              </span>
              <span
                class="text-slate-500 font-mono text-xs"
              >
                s1@example.com
              </span>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              lead
            </span>
          </li>
          <li
            class="flex items-center justify-between text-sm"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-8 h-8 rounded-full bg-slate-700 flex items-center justify-center text-slate-300 text-xs font-medium"
              >
                SA
              </div>
              <span
                class="text-slate-100"
              >
                Sample Two
              </span>
              <span
                class="text-slate-500 font-mono text-xs"
              >
                s2@example.com
              </span>
            </div>
            <span
              class="text-xs text-slate-400"
            >
              mql
            </span>
          </li>
          <li
            class="text-xs text-slate-500 pl-11"
          >
            + 
            5
             more
          </li>
        </ul>
      </div>
      <div
        class="px-6 py-4 border-b border-slate-700"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-xs font-semibold text-slate-400 uppercase tracking-wide"
          >
            What growth will do
          </h3>
          <button
            aria-expanded="false"
            class="text-xs text-slate-400 hover:text-slate-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 rounded px-1"
          >
            ▼ Show reasoning
          </button>
        </div>
        <p
          class="text-sm text-slate-300 mt-2 font-medium"
        >
          Dormant Reactivation — 3-touch
        </p>
        <p
          class="text-xs text-slate-500 mt-1"
        >
          Email + SMS + Email over 5 days.
        </p>
        <ol
          class="mt-3 space-y-2"
        >
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              1
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                0
                : 
                ask open question
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                email
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              2
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                2
                : 
                soft check in
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                sms
              </span>
            </div>
          </li>
          <li
            class="flex items-start gap-3 text-sm"
          >
            <span
              class="shrink-0 w-6 h-6 rounded-full bg-indigo-950 text-indigo-300 text-xs font-medium flex items-center justify-center mt-0.5"
            >
              3
            </span>
            <div
              class="flex-1"
            >
              <span
                class="text-slate-100"
              >
                Day 
                5
                : 
                final value offer
              </span>
              <span
                class="ml-2 text-xs text-slate-500 uppercase tracking-wide"
              >
                email
              </span>
            </div>
          </li>
        </ol>
      </div>
      <div
        class="px-6 py-4 bg-slate-800 border-t border-slate-700 flex items-center justify-between gap-4 flex-wrap"
      >
        <p
          class="text-xs text-slate-500"
        >
          Preview sends no real messages. Launch dispatches via your connected channels.
        </p>
        <div
          class="flex gap-3 shrink-0"
        >
          <button
            class="px-4 py-2 text-sm font-medium border border-slate-600 text-slate-200 rounded-lg hover:bg-slate-700 disabled:opacity-50 disabled:cursor-not-allowed"
          >
            Preview messages
          </button>
          <button
            class="px-4 py-2 text-sm font-medium text-white bg-indigo-500 rounded-lg hover:bg-indigo-400 disabled:opacity-50 disabled:cursor-not-allowed"
          >
            Launch for 7
          </button>
        </div>
      </div>
    </article>
  </div>
</main>
`;
